Fix: invisible success animation was still clickable

--- a/src/app/dynamic-form/form/form.component.css
+++ b/src/app/dynamic-form/form/form.component.css
@@ -25,8 +25,6 @@ label {
   top: 50%;
   transform: translate(-50%, -50%);
   position: absolute;
-  width: 25%;
-  height: 25%;
 }
 
 .form-container {
